remedy/static/css/remedy.css
/*************************************

  Colors

Dark grey - #393536
Light grey - #bdbcbc
Blue - #9ec8d9
Pink - #e97bc4
Purple - #3c204d 

*************************************/
body {
	font-family: 'Open Sans', sans-serif;
	color: #393536;
}

a, .btn-link {
	color:inherit;
	border-bottom: 1px #3c204d dotted;
}

a:hover, .btn-link:hover {
	color: #e97bc4; 
	text-decoration: none; 
	border-bottom: 1px #e97bc4 solid;
}

h1 {
	color: #3c204d; 
	font-family: 'Lobster', cursive;
	display:inline-block;
	margin:0;
	padding: 0; 
	margin-top: -10px; 
}

h2 {
	font-size: 2em; 
	color: #3c204d; 
	font-weight: bold; 
	text-align: center; 
	border-bottom: solid #3c204d; 
	text-transform: uppercase;
}

h3 {
	font-size: 1.4em; 
	color: #3c204d; 
	font-weight: bold; 
}

/* The default styling for this is gray, which is really hard to read. */
h3 small {
  color: #3D2E43; /* Purple desaturated by 25% */
  font-style: italic; 
}

h4 {
	font-weight: bold; 
}

h5 {
	font-weight: bold; 
	font-size: 1.3em;
}

p {
	font-size: 1.3em; 
	width: 90%; 
}

dt {
	color: #3c204d;
	margin-top: 10px; 
	font-size: 1.1em; 
}

blockquote {
  border-left-color: #3c204d;
}

/* Style the "Recently Added" panels */
div.panel.recently-added {
	border: 1px dashed #393536;
}

div.panel.recently-added div.panel-heading {
	background-color: #3C204D; 
	color: #fff;
}

/* Cap the height of these panels and ensure we don't overflow */
div.panel.recently-added div.panel-body {
	height: 5.2em; 
	overflow: hidden;
	text-overflow: ellipsis; 
	word-wrap: break-word;
}

.header {
	padding: 10px;
	min-height: 60px;
	margin-top: 20px;
}

.logo {
	margin:0;
	width:55px;
	padding: 0;
	margin-top: -20px;
}

/* Cut down the vertical margin between our horizontal rules */
.header hr {
	margin: 10px 0;
}

/* Ensure the logout button (which needs its own form for CSRF protection)
 is properly lined up and doesn't have a weird left-side border */
.header .btn-group form {
	display: inline-block;
	margin-left: -1px;
}

.header .btn-group form .btn {
	border-top-left-radius: 0;
	border-bottom-left-radius: 0;
}

/* Also remove left padding from the account column in medium/large views to prevent wrapping */
@media (min-width: 992px) {
	.header div.account-col {
		padding-left: 0;
	}
}


/* Don't apply pull-right in small/xs views */
@media (max-width: 991px) {
	.header .btn-group.pull-right {
		float: none !important;
	}
}

/* For medium/large views, take the padding off of the quick search 
	in the middle to prevent wrapping, as well as cap the width
	of our search inputs */
@media (min-width: 992px) {
	div.simple-search-col {
		padding-left: 0px;
		padding-right: 0px;
	}

	.simple-search input[type="text"].form-control {
		width: 175px;
	}	
}

.bar {
	color:#fff;
	background-color: #3c204d;
	border-top: solid #9ec8d9 5px; 
	border-bottom: solid #9ec8d9 5px;
	border-radius: 5px; 
}

/* Expand size of navigation options */
.nav {
	font-size: 1.2em; 
}

/* Disable decoration on links in our navbar */
div.row.bar a {
	text-decoration: none; 
	border-bottom:0;	
}

div.row.bar a:hover {
	text-decoration: none; 
	border-bottom:0;	
}

.footer-msg {
	text-align: center;
	font-size: 1.3em; 
	font-weight: bold;
	width:80%;
	background-color: #fff;
	border-radius: 10px;
	border: solid #9ec8d9 5px; 
	color: #3c204d; 
	margin-top: 10px; 
	margin-bottom: 10px; 
	padding:10px; 
}

.bottombar {
	color:#FFF;
	background-color: #3c204d; 
	text-align: center;
	font-size: 1.5em; 
	padding-top: 20px; 
	padding-bottom: 20px; 
}

/* Style the images in our social media links */
div.icon-list {
	margin-top: -20px; 
}

div.icon-list img {
	background-color: #fff; 
	border: solid 5px #fff;
	margin-right: 10px; 
	width:60px;
}

/* Style the jumbotron on our front page */
.jumbotron {
	overflow:auto; 
	padding:15px; 
	margin-top:15px; 
}

.jumbotron img {
	float:right; 
	width:200px; 
	margin:5px; 
	margin-top:-50px; 
	margin-right:-70px;
}

/* Style the main content body */
.content {
	margin-left: auto;
  margin-right: auto;
  width: 90%; 
}

